--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><title>5 1 1 github/Remag/DeadSplit/releases/download/v1.04</title>
+<!DOCTYPE html><title>6 1 1 github/Remag/DeadSplit/releases/download/v1.04b</title>
